@@ -1,5 +1,16 @@
 2007-04-05  Roger Leigh  <rleigh@debian.org>
 
+	* bin/schroot-base/schroot-base-options.h: Added actions options
+	group.
+
+	* bin/schroot-base/schroot-base-options.cc (add_option_groups):
+	Add actions group to the visible and global options groups.
+
+	* Updated all options code to use the actions group instead of the
+	general group.  Added default actions to schroot and csbuild.
+
+2007-04-05  Roger Leigh  <rleigh@debian.org>
+
 	* bin/schroot/setup/50sbuild: Fix syntax error in test.
 
 2007-04-05  Roger Leigh  <rleigh@debian.org>
